<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:id="@+id/parentView"
    android:padding="16dp">

    <LinearLayout
        android:layout_above="@id/create_acc_BT_Subbmit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:text="@string/splash_screen_application_name"
            android:textAlignment="center"
            android:fontFamily="@font/nunito_bold"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/sing_in_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="62dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/sing_in_subheader"
            android:textAlignment="center"
            android:textSize="16sp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:layout_marginLeft="5dp"
                android:text="@string/sing_in_userEmail_editText_title"
                android:textAlignment="textStart" />


            <EditText
                android:id="@+id/create_acc_EX_userEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_background_img"
                android:fontFamily="@font/nunito_bold"
                android:hint="@string/sing_in_userEmail_editText_title_Hint"
                android:padding="5dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:layout_marginLeft="5dp"
                android:text="@string/sing_in_userPassword_editText_title"
                android:textAlignment="textStart" />


            <EditText
                android:id="@+id/create_acc_EX_userPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_background_img"
                android:fontFamily="@font/nunito_bold"
                android:hint="@string/sing_in_userPassword_editText_title_Hint"
                android:padding="5dp" />


        </LinearLayout>




    </LinearLayout>


    <Button
        android:id="@+id/create_acc_BT_Subbmit"
        android:backgroundTint="@color/button_color"
        android:text="@string/button_create_acount_text"
        android:textStyle="bold"
        android:layout_above="@id/create_acc_BT_have_account"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/nunito_bold"
        android:layout_width="319dp"
        android:layout_height="74dp"
        android:layout_gravity="center" />


    <TextView
        android:id="@+id/create_acc_BT_have_account"
        android:text="@string/button_have_acount_text"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:textColor="@color/button_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</RelativeLayout>